--- a/Css/leon.css
+++ b/Css/leon.css
@@ -28,7 +28,7 @@
 body {
     font-family: 'Work Sans', sans-serif;
     text-transform: capitalize;
-    background-color: #eee;
+    background-color: #f9f9;
 }
 .container {
     
