--- a/Css/normalize.css
+++ b/Css/normalize.css
@@ -324,7 +324,7 @@ textarea {
    * Remove the inner padding in Chrome and Safari on macOS.
    */
 
-[type="search"]::-webkit-search-decoration {
+[type="search"]::kit-search-decoration {
   appearance: none;
 }
 
