--- a/Css/leon.css
+++ b/Css/leon.css
@@ -2,6 +2,8 @@
 :root {
     --main-color: #10cab7;
     --secondary-color: #2c4755;
+    --section-padding: 60px 0;
+    --section-background: #f6f6f6;
 }
 
 /* End variables */
@@ -201,8 +203,8 @@ body {
 /* End landing section */
 /* Start features */
 .features {
-    padding: 60px 0;
-    background-color: #f6f6f6;
+    padding: var(--section-padding);
+    background-color: var(--section-background);
 }
 
 .features .container {
@@ -254,7 +256,7 @@ body {
 /* End features */
 /* Start Services */
 .Services {
-    padding: 60px 0;
+    padding: var(--section-padding);
 }
 
 .Services .services-content {
@@ -313,5 +315,42 @@ body {
 }
 .col-image {
     margin-top: 60px;
+}
+/* End Services */
+/* Start Services */
+.portfolio {
+    padding: var(--section-padding);
+    background-color: var(--section-background);
+}
+.portfolio .portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin-top: 100px;
+}
+.portfolio .portfolio-content .card {
+    background-color: #eee;
+}
+.portfolio .portfolio-content img {
+    max-width: 100%;
+    height: 235px;
+}
+.portfolio .portfolio-content .info {
+    padding: 20px;
+}
+.portfolio .portfolio-content .info h3 {
+    margin: 0;
+    font-weight: 800;
+}
+.portfolio .portfolio-content .info p {
+    color: #777;
+    font-weight: 300;
+    line-height: 1.6;
+    font-size: 14px;
+}
+@media (max-width: 767px) {
+    .portfolio .portfolio-content {
+        text-align: center;
+    }
 }
 /* End Services */
