--- a/Css/leon.css
+++ b/Css/leon.css
@@ -317,7 +317,7 @@ body {
     margin-top: 60px;
 }
 /* End Services */
-/* Start Services */
+/* Start portoflio */
 .portfolio {
     padding: var(--section-padding);
     background-color: var(--section-background);
@@ -333,7 +333,9 @@ body {
 }
 .portfolio .portfolio-content img {
     max-width: 100%;
+    min-width: 100%;
     height: 235px;
+    padding: 0 8px;
 }
 .portfolio .portfolio-content .info {
     padding: 20px;
@@ -353,4 +355,74 @@ body {
         text-align: center;
     }
 }
-/* End Services */
+/* End portfolio */
+/* Start about */
+.about {
+    padding: var(--section-padding);
+}
+.about .about-content {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+    .about .about-content {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+.about .about-content .image {
+    position: relative;
+    width: 388px;
+    height: 450px;
+}
+.about .about-content .image::before {
+    content: '';
+    position: absolute;
+    background: #c7cbcf;
+    width: 100px;
+    height: calc(100% + 80px);
+    top: -40px;
+    left: -20px;
+    z-index: -1;
+}
+.about .about-content .image::after {
+    content: "";
+    position: absolute;
+    top: -23px;
+    right: -99px;
+    width: 120px;
+    height: 350px;
+    border-left: 80px solid var(--main-color);
+    border-bottom: 80px solid var(--main-color);
+    z-index: -1;
+}
+@media (max-width: 991px) {
+    .about .about-content .image::before,
+    .about .about-content .image::after {
+        display: none;
+    }
+}
+.about .about-content img {
+    max-width: 100%;
+}
+.about .about-content .text {
+    flex-basis: calc(100% - 500px);
+}
+.about .about-content .text p:first-of-type {
+    font-weight: bold;
+    line-height: 2;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.about .about-content .text hr {
+    width: 50%;
+    display: inline-block;
+    border-color: var(--main-color);
+}
+.about .about-content .text p:last-of-type {
+    line-height: 2;
+    color: #777;
+}
+/* End anout */
