--- a/Css/leon.css
+++ b/Css/leon.css
@@ -425,4 +425,57 @@ body {
     line-height: 2;
     color: #777;
 }
-/* End anout */
+/* End about */
+/* Start contact */
+.contact {
+    padding: var(--section-padding);
+    background-color: var(--section-background);
+}
+.contact .info {
+    padding: var(--section-padding);
+    text-align: center;
+}
+.contact .info .label {
+    font-size: 35px;
+    font-weight: 800;
+    color: var(--secondary-color);
+    letter-spacing: -2px;
+    margin-bottom: 15px;
+}
+.contact .info .link {
+    display: block;
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--main-color);
+    text-decoration: none;
+}
+@media (max-width: 768px) {
+    .contact .info .link {
+        font-size: 25px;
+    }
+}
+.contact .info .social {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    color: #777;
+    letter-spacing: -1px;
+}
+.contact .info .social i {
+    color: var(--secondary-color);
+    margin-left: 7px;
+}
+/* End contact */
+/* Start footer */
+.footer {
+    padding: 30px 10px;
+    background-color: var(--secondary-color);
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+}
+.footer span {
+    color: var(--main-color);
+}
+/* End footer */
