--- a/Css/leon.css
+++ b/Css/leon.css
@@ -31,7 +31,9 @@
     -moz-box-sizing: border-box;
 
 }
-
+html {
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Work Sans', sans-serif;
     text-transform: capitalize;
