--- a/Css/leon.css
+++ b/Css/leon.css
@@ -247,7 +247,12 @@ body {
     z-index: 1;
     display: flex;
     justify-content: center;
-    opacity: 0.8;
+    opacity: 0.6;
+    transition: 0.3s 0.1s;
+    cursor: pointer;
+}
+.up:hover {
+    opacity: 1;
 }
 .up a i {
     padding: 8px 0px 0px 0;
@@ -266,7 +271,7 @@ body {
         z-index: 1;
         display: flex;
         justify-content: center;
-        opacity: 0.8;
+        opacity: 0.6;
     }
     .up a i {
         padding: 0;
